<resources>
    <string name="app_name">BlueServerApp</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="play_music">Play Music</string>
    <string name="disconnect">Disconnect</string>
    <string name="show_paired_devices">Show Paired Devices</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="previously_paired_devices">Previously Paired Devices</string>
    <string name="pair_a_new_device">Make my device Discoverable</string>
    <string name="type_your_message">Type your message</string>
    <string name="data_will_show_here">Data will show here</string>
    <string name="send">Send</string>
    <string name="location">Location</string>
    <string name="get_my_current_location">Get My current Location</string>
    <string name="share_this_location">Share this location</string>

</resources>